--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,10 @@
     "builds": [
       { "src": "server/package.json", "use": "@vercel/node" },
       { "src": "client/package.json", "use": "@vercel/static-build" }
+    ],
+    "routes": [
+      { "handle": "filesystem" },
+      { "src": "/.*", "dest": "/client/index.html" }
     ]
   }
   
