--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,11 @@
 {
     "rewrites": [
-      { "source": "/api/(.*)", "destination": "/server/api/$1" }
+      { "source": "/api/(.*)", "destination": "/server/api/$1" },
+      { "source": "/(.*)", "destination": "/client/$1" }
     ],
     "builds": [
       { "src": "server/package.json", "use": "@vercel/node" },
       { "src": "client/package.json", "use": "@vercel/static-build" }
-    ],
-    "routes": [
-      { "handle": "filesystem" },
-      { "src": "/.*", "dest": "/client/index.html" }
     ]
   }
   
