--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,23 @@
 {
-    "rewrites": [
-      { "source": "/api/(.*)", "destination": "/server/api/$1" },
-      { "source": "/(.*)", "destination": "/client/$1" }
-    ],
     "builds": [
-      { "src": "server/package.json", "use": "@vercel/node" },
-      { "src": "client/package.json", "use": "@vercel/static-build" }
+      {
+        "src": "client/package.json",
+        "use": "@vercel/static-build"
+      },
+      {
+        "src": "server/package.json",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/api/(.*)",
+        "dest": "/server/api/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/client/$1"
+      }
     ]
   }
   
